scss files, and updates after rebase on master
Signed-off-by: Jim Ehrismann <jehrismann@mirantis.com>

--- a/src/renderer/components/+config-vertical-pod-autoscalers/autoscaler.mixins.scss
+++ b/src/renderer/components/+config-vertical-pod-autoscalers/autoscaler.mixins.scss
@@ -3,14 +3,16 @@
  * Licensed under MIT License. See LICENSE in root directory for more information.
  */
 
-$hpa-status-colors: (
-  abletoscale: var(--colorOk),
+$vpa-status-colors: (
+  recommendationprovided: var(--colorOk),
   scalingactive: var(--colorInfo),
   scalinglimited: var(--colorSoftError),
 );
 
-@mixin hpa-status-bgc {
-  @each $status, $color in $hpa-status-colors {
+@mixin vpa-status-bgc {
+
+  @each $status,
+  $color in $vpa-status-colors {
     &.#{$status} {
       background: $color;
       color: white;
