--- a/src/renderer/components/+config-vertical-pod-autoscalers/vpa.scss
+++ b/src/renderer/components/+config-vertical-pod-autoscalers/vpa.scss
@@ -22,7 +22,7 @@
     &.status {
       flex: 1.5;
       @include table-cell-labels-offsets;
-      @include hpa-status-bgc;
+      @include vpa-status-bgc;
     }
 
     &.age {
